added content for dataset2

--- a/Coursework/EDA.ipynb
+++ b/Coursework/EDA.ipynb
@@ -263,6 +263,263 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Arm length (m)</th>\n",
+       "      <th>Ball weight (kg)</th>\n",
+       "      <th>Ball radius (mm)</th>\n",
+       "      <th>Air temperature (deg C)</th>\n",
+       "      <th>Spring constant (N per m)</th>\n",
+       "      <th>Device weight (kg)</th>\n",
+       "      <th>Target hit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.313463</td>\n",
+       "      <td>0.317565</td>\n",
+       "      <td>30.429217</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>571.817843</td>\n",
+       "      <td>5.876016</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.199977</td>\n",
+       "      <td>0.387987</td>\n",
+       "      <td>36.200062</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>430.608228</td>\n",
+       "      <td>0.591052</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.146253</td>\n",
+       "      <td>0.428552</td>\n",
+       "      <td>59.157785</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1733.406230</td>\n",
+       "      <td>4.975027</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.143222</td>\n",
+       "      <td>0.417935</td>\n",
+       "      <td>48.553410</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>490.551664</td>\n",
+       "      <td>7.031690</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.089183</td>\n",
+       "      <td>0.463229</td>\n",
+       "      <td>70.498961</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1387.375798</td>\n",
+       "      <td>5.738063</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Arm length (m)  Ball weight (kg)  Ball radius (mm)  \\\n",
+       "0        0.313463          0.317565         30.429217   \n",
+       "1        0.199977          0.387987         36.200062   \n",
+       "2        0.146253          0.428552         59.157785   \n",
+       "3        0.143222          0.417935         48.553410   \n",
+       "4        0.089183          0.463229         70.498961   \n",
+       "\n",
+       "   Air temperature (deg C)  Spring constant (N per m)  Device weight (kg)  \\\n",
+       "0                     19.0                 571.817843            5.876016   \n",
+       "1                     24.0                 430.608228            0.591052   \n",
+       "2                     26.0                1733.406230            4.975027   \n",
+       "3                     16.0                 490.551664            7.031690   \n",
+       "4                     19.0                1387.375798            5.738063   \n",
+       "\n",
+       "   Target hit  \n",
+       "0         1.0  \n",
+       "1         1.0  \n",
+       "2         1.0  \n",
+       "3         1.0  \n",
+       "4         1.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../Data/dataset2.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile = ProfileReport(df, title=\"dataset2_report\", explorative = True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e34bffd77cc43c7897a86c328849bad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Summarize dataset'), FloatProgress(value=0.0, max=21.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7519ae6fc734df0860b8daae2e21994",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Generate report structure'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad7815a86785425b8d48b20b1aefa250",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Render HTML'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2fb11560c1f64507ba0531e396243feb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Export report to file'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "profile.to_file(\"../Reports/dataset2_report.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comments\n",
+    "\n",
+    "(For reference, please see dataset2_report.html) \n",
+    "\n",
+    "Compared with dataset1, the only differences are that the parameters \"ball radius\" and \"spring constant\" are much more skewed (right skew).\n",
+    "\n",
+    "This dataset has an exact 50-50 split with the dataset.\n",
+    "\n",
+    "**Anaysis:**\n",
+    "\n",
+    "There are also more interactions in this dataset. Spring constant has a very strong negative correlation with arm length.\n",
+    "\n",
+    "Ball radius has a very strong positive correlation with ball weight. \n",
+    "\n",
+    "These may affect the modelling stage, so might be worth zeroing them (need to verify that this won't have any effect!)\n",
+    "\n",
+    "In general, another main difference is that none of the attributes very strongly correlate with the target hit. This should make the training process rather interesting.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
