tried NN model /w 1 output instead of 2

--- a/Coursework/Model1.ipynb
+++ b/Coursework/Model1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "4                -1.619596                  -1.303393           -0.271138  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Name: Target hit, dtype: float64"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -743,7 +743,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50/50 [==============================] - 0s 980us/step - loss: 0.2527 - accuracy: 0.8925 - binary_accuracy: 0.8925 - binary_crossentropy: 0.2527 - categorical_accuracy: 0.8925\n"
+      "50/50 [==============================] - 0s 2ms/step - loss: 0.2527 - accuracy: 0.8925 - binary_accuracy: 0.8925 - binary_crossentropy: 0.2527 - categorical_accuracy: 0.8925\n"
      ]
     },
     {
@@ -756,7 +756,7 @@
        " 0.8924999833106995]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,6 +1933,116 @@
     "\n",
     "I need to make sure that the method of validation is more robust (use cross validation maybe, and then try on different seeds?)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.8, random_state = 23)\n",
+    "tf.random.set_seed(1)\n",
+    "\n",
+    "def uncompiled_model():\n",
+    "    inputs =  Input(shape = (6,), name = 'Data')\n",
+    "    x = Dense(4, activation = 'relu', name = 'dense_1')(inputs)\n",
+    "    x = BatchNormalization()(x)\n",
+    "    x = Dense(4, activation = 'relu', name = 'dense_2')(x)\n",
+    "\n",
+    "    outputs = Dense(1, activation = None, name = 'TargetHit')(x)\n",
+    "    model = Model(inputs = inputs, outputs = outputs)\n",
+    "    return model\n",
+    "    \n",
+    "    \n",
+    "def compile_model():\n",
+    "    model = uncompiled_model()\n",
+    "    model.compile(\n",
+    "        optimizer=\"adam\",\n",
+    "        loss=\"mean_squared_error\",\n",
+    "        metrics=[\"accuracy\",\n",
+    "                 \"binary_accuracy\",\n",
+    "                 \"binary_crossentropy\",\n",
+    "                 \"categorical_accuracy\"\n",
+    "                ],\n",
+    "    )\n",
+    "    return model\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50/50 [==============================] - 0s 2ms/step - loss: 0.1199 - accuracy: 0.8769 - binary_accuracy: 0.8769 - binary_crossentropy: 0.3471 - categorical_accuracy: 1.0000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.11992811411619186,\n",
+       " 0.8768749833106995,\n",
+       " 0.8768749833106995,\n",
+       " 0.3471261262893677,\n",
+       " 1.0]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = compile_model()\n",
+    "model.fit(X_train, y_train, epochs = 50, verbose = 0)\n",
+    "yhat = model.predict(X_test)\n",
+    "score = model.evaluate(X_test, y_test, verbose=1)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.1516405 ],\n",
+       "       [1.9468489 ],\n",
+       "       [0.12171301],\n",
+       "       ...,\n",
+       "       [0.67125535],\n",
+       "       [1.8183311 ],\n",
+       "       [0.30547097]], dtype=float32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yhat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
