added important link

--- a/Coursework/TestingEvaluateClass.ipynb
+++ b/Coursework/TestingEvaluateClass.ipynb
@@ -688,7 +688,10 @@
     "\n",
     "USE callbacks, USE leakyRELU?\n",
     "\n",
-    "https://stackoverflow.com/questions/52678215/find-input-that-maximises-output-of-a-neural-network-using-keras-and-tensorflow\n"
+    "https://stackoverflow.com/questions/52678215/find-input-that-maximises-output-of-a-neural-network-using-keras-and-tensorflow\n",
+    "\n",
+    "\n",
+    "https://datascience.stackexchange.com/questions/66869/setting-class-weights-for-imbalanced-dataset-how-using-earlystopping IMPORTANT"
    ]
   },
   {
